--- a/atividade_5/views/index.html
+++ b/atividade_5/views/index.html
@@ -17,7 +17,7 @@
             <div class="col-6">
                 <h1>Olá usuário, preencha o formulário abaixo</h1>
                 <hr>
-                <form action="/precessar_dados" method="post">
+                <form action="/dados" method="post">
                     <div class="mb-3 mt-3">
                         <label for="nome" class="form-label">Nome:</label>
                         <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome">
