--- a/atividade6/views/dados.html
+++ b/atividade6/views/dados.html
@@ -10,5 +10,7 @@
     <h1>App html</h1>
     <h3>Nome: {{usuario.nome}}</h3>
     <h3>Telefone: {{usuario.telefone}}</h3>
+    <h3>Endereço: {{usuario.endereco}}</h3>
+    <h3>Data de nascimento: {{usuario.dta}}</h3>
 </body>
 </html>
